<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="330dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#232323"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:id="@+id/layout">

        <TextView
            android:id="@+id/dialog_name_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_name_info_dialog"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginTop="90dp" />
        <TextView
            android:id="@+id/dialog_phone_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/phone_number_info_dialog"
            android:textColor="@android:color/white"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/share_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/share"
                android:background="@android:color/transparent"
                android:layout_margin="10dp"
                android:contentDescription="@string/share_btn_img_desc" />

            <ImageButton
                android:id="@+id/call_dialog_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/phone"
                android:background="@android:color/transparent"
                android:layout_margin="10dp"
                android:contentDescription="@string/phone_btn_desc" />
        </LinearLayout>


    </LinearLayout>



    <ImageView
        android:id="@+id/dialog_img_id"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/contact_pp_pop"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/pp_img_desc" />

</RelativeLayout>