<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_view"
    app:cardCornerRadius="4dp"
    android:elevation="7dp"
    app:cardUseCompatPadding="true"
    android:background="#e57373"
    >

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_marginTop="5dp"
        android:id="@+id/contact_item_id">

        <!--Este archivo xml le dara formato al item de cada contacto -->

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:src="@mipmap/ic_launcher_round"
            android:id="@+id/img_contact"
            android:contentDescription="@string/pp_default_dsc" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/contact_name_rv"
                android:id="@+id/contact_name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number_rv"
                android:id="@+id/phone_number"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="end"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageButton
                android:id="@+id/favBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:scaleType="fitCenter"
                android:background="@android:color/transparent"
                android:src="@drawable/likeempty"
                android:contentDescription="@string/like_btn_rv" />
            <ImageButton
                android:id="@+id/callBtn"
                android:background="@android:color/transparent"
                android:layout_gravity="center_vertical"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/phone_plain"
                android:contentDescription="@string/call_btn_dsc" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>